<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.hussam.assignment2.BlankFragment"
    android:id="@+id/Start">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:paddingTop="18dp"
            android:id="@+id/a">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Från"
                android:id="@+id/Från"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="252dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentBottom="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Till"
                android:id="@+id/Till"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="false"
                android:layout_alignParentBottom="false"
                android:layout_alignParentRight="false"
                android:layout_alignParentTop="false" />

            <EditText
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:id="@+id/editText"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/editText2"
                android:layout_alignBottom="@+id/Från"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/i">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Favorites"
                android:id="@+id/button"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/b">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/date"
                android:id="@+id/textView5"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Now"
                android:id="@+id/textView6"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Change"
                android:id="@+id/button2"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/c">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Ankomst"
                android:id="@+id/radioButton"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Avgång"
                android:id="@+id/radioButton2"
                android:layout_alignBottom="@+id/radioButton"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/d">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/Trafikslag"
                android:id="@+id/textView7"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Ändra"
                android:id="@+id/button3"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:id="@+id/f">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Bevakningar"
                android:id="@+id/button4"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>
